--- a/css/blackjack.css
+++ b/css/blackjack.css
@@ -30,3 +30,21 @@ body {
   height: 50px;
   font-size: 20px;
 }
+
+#deal {
+  width: 100px;
+  height: 50px;
+  font-size: 20px;
+}
+
+#deal {
+  width: 100px;
+  height: 50px;
+  font-size: 20px;
+}
+
+
+.hidden
+{
+    visibility: hidden
+}
