--- a/css/blackjack.css
+++ b/css/blackjack.css
@@ -59,9 +59,14 @@ h3 {
   margin: 1px;
   margin: 10px;
   -webkit-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
--moz-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
-background-color: #fff;
+  -moz-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
+  box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
+  background-color: #fff;
+  animation: fadeIn 2s;
+  -webkit-animation: fadeIn 2s;
+  -moz-animation: fadeIn 2s;
+  -o-animation: fadeIn 2s;
+  -ms-animation: fadeIn 2s;
 }
 
 #your-cards img {
@@ -70,9 +75,39 @@ background-color: #fff;
   margin: 1px;
   margin: 10px;
   -webkit-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
--moz-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
-background-color: #fff;
+  -moz-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
+  box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
+  background-color: #fff;
+  animation: fadeIn 2s;
+  -webkit-animation: fadeIn 2s;
+  -moz-animation: fadeIn 2s;
+  -o-animation: fadeIn 2s;
+  -ms-animation: fadeIn 2s;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-moz-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-webkit-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-o-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-ms-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
 
 #hit {
