--- a/css/blackjack.css
+++ b/css/blackjack.css
@@ -20,25 +20,30 @@ body {
 }
 
 h2 {
-  color: #fff;
+  color: #aad0a7;
   margin-bottom: 10px;
   margin-top: 0px;
+  font-size: 1.2em;
 }
 
 h3 {
-  color: #fff;
-  font-size: 2.5em;
+  color: #ffffff;
+  font-size: 1.6em;
 }
 
 .top-bar {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 10px;
   width: 100%;
+  height: 100px;
 }
 
-.top-bar img.logo {
+.logo img.logo {
   width: 6em;
+  position: absolute;
+  top: 10px;
+  left: 10px;
 }
 
 .middle {
@@ -49,13 +54,33 @@ h3 {
   width: 100%;
 }
 
-#dealer-cards {
+.top-border {
+  border: 4px solid #aad0a7;
+  /* border: 4px solid #9ccd98; */
+  max-width: 800px;
+  width: 100%;
+  padding: 20px;
   margin-bottom: 30px;
 }
+
+
+.bottom-border {
+  border: 4px solid #aad0a7;
+  /* border: 4px solid #9ccd98; */
+  max-width: 800px;
+  width: 100%;
+  padding: 20px;
+}
+/* 
+#dealer-cards {
+  margin-bottom: 30px;
+} */
 
 #dealer-cards img {
   height: 175px;
   width: 125px;
+  /* height: 100px;
+  width: 75px; */
   margin: 1px;
   margin: 10px;
   -webkit-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
@@ -72,6 +97,8 @@ h3 {
 #your-cards img {
   height: 175px;
   width: 125px;
+  /* height: 100px;
+  width: 75px; */
   margin: 1px;
   margin: 10px;
   -webkit-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
@@ -124,11 +151,30 @@ h3 {
   background-color: black;
   border: none;
   border-radius: 5px;
-  margin: 0px 5px;
+  margin: 0px 5px 0px 0px;
   color: #fff;
   text-transform: uppercase;
   
 }
+
+#buttons {
+  margin-top: 30px;
+}
+
+button#restart {
+  background-color: #2F7C21;
+  color: #fff;
+  /* border: 2px solid #fff; */
+}
+
+#stay:hover, #hit:hover, #restart:hover {
+  -webkit-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
+  -moz-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
+  box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
+  transition: 0.3s;
+}
+
+
 
 
 .hidden
