--- a/css/blackjack.css
+++ b/css/blackjack.css
@@ -19,6 +19,28 @@ body {
   align-items: center; */
 }
 
+.display-none {
+  display: none!important;
+}
+
+#splash {
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#splash img {
+  width: 8em;
+}
+
 h2 {
   color: #aad0a7;
   margin-bottom: 10px;
@@ -61,6 +83,7 @@ h3 {
   width: 100%;
   padding: 20px;
   margin-bottom: 30px;
+  background-color: #137513;
 }
 
 
@@ -70,6 +93,7 @@ h3 {
   max-width: 800px;
   width: 100%;
   padding: 20px;
+  background-color: #137513;
 }
 /* 
 #dealer-cards {
@@ -151,7 +175,7 @@ h3 {
   background-color: black;
   border: none;
   border-radius: 5px;
-  margin: 0px 5px 0px 0px;
+  margin: 0px 20px 0px 0px;
   color: #fff;
   text-transform: uppercase;
   
@@ -162,7 +186,7 @@ h3 {
 }
 
 button#restart {
-  background-color: #2F7C21;
+  /* background-color: #2F7C21; */
   color: #fff;
   /* border: 2px solid #fff; */
 }
