--- a/css/blackjack.css
+++ b/css/blackjack.css
@@ -83,6 +83,22 @@ animation: fadeIn 2s;
 -ms-animation: fadeIn 2s;
 }
 
+#error {
+  position: absolute;
+  bottom: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #000;
+  font-size: 0.9em;
+  color: #fff;
+  padding: 10px 30px;
+  border-radius: 5px;
+  animation: fadeIn 2s;
+-webkit-animation: fadeIn 2s;
+-moz-animation: fadeIn 2s;
+-o-animation: fadeIn 2s;
+-ms-animation: fadeIn 2s;
+}
+
 h2 {
   color: #aad0a7;
   margin-bottom: 10px;
