--- a/css/blackjack.css
+++ b/css/blackjack.css
@@ -48,7 +48,8 @@ body {
 }
 
 #name-input {
-width: 300px;
+max-width: 300px;
+width: 100%;
 margin-bottom: 30px;
 padding: 15px;
 border: none;
@@ -137,7 +138,7 @@ h3 {
 .top-border {
   border: 4px solid #aad0a7;
   /* border: 4px solid #9ccd98; */
-  max-width: 800px;
+  max-width: 750px;
   width: 100%;
   padding: 20px;
   margin-bottom: 30px;
@@ -148,7 +149,7 @@ h3 {
 .bottom-border {
   border: 4px solid #aad0a7;
   /* border: 4px solid #9ccd98; */
-  max-width: 800px;
+  max-width: 750px;
   width: 100%;
   padding: 20px;
   background-color: #137513;
@@ -159,10 +160,10 @@ h3 {
 } */
 
 #dealer-cards img {
-  height: 175px;
-  width: 125px;
-  /* height: 100px;
-  width: 75px; */
+  /* height: 175px;
+  width: 125px; */
+  height: 155px;
+  width: 111px;
   margin: 1px;
   margin: 10px;
   -webkit-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
@@ -177,10 +178,10 @@ h3 {
 }
 
 #your-cards img {
-  height: 175px;
-  width: 125px;
-  /* height: 100px;
-  width: 75px; */
+  /* height: 175px;
+  width: 125px; */
+  height: 155px;
+  width: 111px;
   margin: 1px;
   margin: 10px;
   -webkit-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.55);
@@ -233,10 +234,14 @@ h3 {
   background-color: black;
   border: none;
   border-radius: 5px;
-  margin: 0px 20px 0px 0px;
+  /* margin: 0px 20px 0px 0px; */
   color: #fff;
   text-transform: uppercase;
   
+}
+
+#stay {
+  margin: 0px 20px 0px;
 }
 
 #buttons {
@@ -341,3 +346,147 @@ font-size: 1.5em;
   width: 450px;
   height: 250px;
 }
+
+
+@media screen and (max-width: 768px) {
+  .logo img.logo {
+    width: 5em;
+}
+
+.middle {
+  padding: 0px 20px;
+}
+
+#dealer-cards img {
+  height: 115px;
+  width: 82px;
+
+}
+
+#your-cards img {
+  height: 115px;
+  width: 82px;
+}
+
+}
+
+@media screen and (max-width: 600px) {
+
+  .top-border {
+    padding: 10px;
+  }
+  
+
+  .bottom-border {
+    padding: 10px;
+  }
+  
+  #dealer-cards img {
+    height: 100px;
+    width: 71px;
+  
+  }
+  
+  #your-cards img {
+    height: 100px;
+    width: 71px;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  
+  .middle h2 {
+    font-size: 1em;
+  }
+
+  #dealer-cards img {
+    height: 80px;
+    width: 57px;
+  
+  }
+  
+  #your-cards img {
+    height: 80px;
+    width: 57px;
+  }
+
+  #stay, #hit, #restart{
+    width: 90px;
+    height: 40px;
+    font-size: 0.6em;
+    
+  }
+  
+  #stay {
+    margin: 0px 10px 0px;
+  }
+
+  .footer p {
+    font-size: 1em;
+}
+
+.youtube {
+  width: 360px;
+  height: 200px;
+}
+
+}
+
+@media screen and (max-width: 480px) {
+  
+  #dealer-cards img {
+    height: 60px;
+    width: 43px;
+  
+  }
+  
+  #your-cards img {
+    height: 60px;
+    width: 43px;
+  }
+
+  #splash {
+    padding: 10px;
+  }
+
+
+}
+
+@media screen and (max-width: 400px) {
+
+  .container-tray {
+    padding: 10px;
+  }
+
+  .tray h2 {
+    margin-bottom: 20px;
+  }
+
+  .youtube {
+    width: 100%;
+    height: 200px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+
+  #buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  }
+
+  #stay {
+    margin: 10px 0px 10px;
+}
+
+#hit, #restart, #stay  {
+  width: 100%;
+}
+
+}
+
+
+
