--- a/css/blackjack.css
+++ b/css/blackjack.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100vh;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
